
2005-11-23  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* configure.ac: Invoke gl_WOE32_DLL.

2005-09-18  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Upgrade to libtool-1.5.20.

2005-09-18  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Complete upgrade to libtool-1.5.16.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Upgrade to libtool-1.5.16.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* tests/rpath-1, tests/rpath-2_a, tests/rpath-2_b, tests/rpath-3_a:
	* tests/rpath-3_b, tests/rpathcfg.sh: Use build-aux instead of config.

2005-03-22  Bruno Haible  <bruno@clisp.org>

	* configure.ac (AC_CONFIG_AUX_DIR): Use ../build-aux.
	* tests/rpath*/configure.ac (AC_CONFIG_AUX_DIR): Use ../../../build-aux.
	* Makefile.am: Replace config/m4 with m4 and config/ with build-aux/.
	(build-aux-dir): Renamed from config-dir.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Upgrade to libtool-1.5.12: support for Portland Group
	compiler, support for DragonFly BSD, relaxed copyright permissions.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Use 'sed' with ranges only in C locale. Needed because
	in the et_EE locale, the letters T U V W C Y come after Z.
	Reported by Mike Frysinger <vapier@gentoo.org>.

2005-01-09  Bruno Haible  <bruno@clisp.org>

	Adaptation to automake-1.9.
	* Makefile.am (tests/rpath*/aclocal.m4): Turn the m4 directories
	into absolute pathnames, so that aclocal-1.9 includes the files
	literally into the created aclocal.m4 file, instead of putting
	m4_include(...) statements that don't work after the directory has
	been copied to a different location.

2005-01-05  Bruno Haible  <bruno@clisp.org>
