@@ -1,5 +1,5 @@
 ## Makefile for the autoconf-lib-link/tests subdirectory of GNU gettext
-## Copyright (C) 1995-1997, 2001-2003 Free Software Foundation, Inc.
+## Copyright (C) 1995-1997, 2001-2003, 2006 Free Software Foundation, Inc.
 ##
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -21,18 +21,18 @@ AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 MOSTLYCLEANFILES =
 
 TESTS = rpath-1a rpath-1b \
-	rpath-2aaa rpath-2aab rpath-2aac rpath-2aad \
-	rpath-2aba rpath-2abb rpath-2abc rpath-2abd \
-	rpath-2baa rpath-2bab rpath-2bac rpath-2bad \
-	rpath-2bba rpath-2bbb rpath-2bbc rpath-2bbd \
-	rpath-3aaa rpath-3aab rpath-3aac rpath-3aad \
-	           rpath-3aaf            rpath-3aah \
-	rpath-3aba rpath-3abb rpath-3abc rpath-3abd \
-	           rpath-3abf            rpath-3abh \
-	rpath-3baa rpath-3bab rpath-3bac rpath-3bad \
-	rpath-3bae rpath-3baf rpath-3bag rpath-3bah \
-	rpath-3bba rpath-3bbb rpath-3bbc rpath-3bbd \
-	rpath-3bbe rpath-3bbf rpath-3bbg rpath-3bbh
+	rpath-2aaa rpath-2aab            rpath-2aad \
+	rpath-2aba rpath-2abb            rpath-2abd \
+	rpath-2baa rpath-2bab            rpath-2bad \
+	rpath-2bba rpath-2bbb            rpath-2bbd \
+	rpath-3aaa rpath-3aab            rpath-3aad \
+	                                 rpath-3aah \
+	rpath-3aba rpath-3abb            rpath-3abd \
+	                                 rpath-3abh \
+	rpath-3baa rpath-3bab            rpath-3bad \
+	                                 rpath-3bah \
+	rpath-3bba rpath-3bbb            rpath-3bbd \
+	                                 rpath-3bbh
 
 EXTRA_DIST = $(TESTS) \
 	rpathx/configure.ac rpathx/aclocal.m4 rpathx/configure \
