@@ -55,6 +55,14 @@ Known failures:
   The last -rpath option overrides all previous ones. One would need to
   pass all directories, separated by colons, in a single -rpath option.
 
+* On Linux/x86_64: the tests
+    rpath-2aac rpath-2abc rpath-2bac rpath-2bbc
+    rpath-3aac rpath-3aaf rpath-3abc rpath-3abf
+    rpath-3bac rpath-3bae rpath-3baf rpath-3bag
+    rpath-3bbc rpath-3bbe rpath-3bbf rpath-3bbg
+  fail, because code from static libraries not compiled with -fPIC cannot
+  be integrated into shared libraries: linker error about relocations.
+
 * Solaris: the tests
     rpath-3bae rpath-3bbe
     rpath-3aaf rpath-3abf
